--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,9 @@
             <ul>
                 <li>
                     {% if page.url == '/' %}
-                    <a class="active" href="{{site.url}}/">
+                    <a class="active" href="{{site.baseurl}}/">
                         {% else %}
-                    <a href="{{site.url}}/">
+                    <a href="{{site.baseurl}}/">
                     {% endif %}
                         <i class="fa fa-home"></i>主页
                     </a>
