--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
                     {% endif %}
                         <i class="fa fa-home"></i>主页
                     </a>
-                    <a href="https://ms365.taobao.com">我的商店</a>
+                    <a href="https://ms365.taobao.com">商店</a>
                 </li>
 
                 {% for my_page in site.pages %}
