--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="top">
     <div class="wrapper">
-        <a href="https://ms365.taobao.com" class="brand">{{ site.title }}</a>
+        <a href="https://it88.taobao.com" class="brand">{{ site.title }}</a>
         <small>{{site.brief-intro}}</small>
         <button id="headerMenu" class="menu"><i class="fa fa-bars"></i></button>
         <nav id="headerNav">
@@ -13,7 +13,7 @@
                     {% endif %}
                         <i class="fa fa-home"></i>主页
                     </a>
-                    <a href="https://ms365.taobao.com">商店</a>
+                    <a href="https://it88.taobao.com">商店</a>
                 </li>
 
                 {% for my_page in site.pages %}
